tests/miniJava/neg/004339_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { public else java ( ) { return 0 ; } }
